# taskwave-app

./: .gitattributes  .gitignore  README.md  Untitled-1.ipynb  Untitled7.ipynb  error.txt  homework.ipynb  package-lock.json  package.json  render.yaml  seoung_nam_floating_population_data.csv  test.py  test_2.py  tsconfig.app.tsbuildinfo
aidreamcampex/: ex1.py  ex2.py  ex3.py  index.html  style.css  testsss.html
deploy/: --build-arg  .env  docker-compose.yml
deploy/backend/: Dockerfile  alembic.ini  pyproject.toml
deploy/backend/alembic/: env.py
deploy/backend/alembic/versions/: 13858e7f4808_add_user_post_comment_tables.py  1c3d1999c943_init_clustering_tables.py  3ba129e02b1b_allow_null_for_job_timestamps.py  7d5c9ccc37a8_add_parent_id_to_comments.py  7d98f35f0c29_add_users_table.py  b511805ae0bc_add_parent_id_to_comments.py  ea700d9ad32c_add_parent_id_to_comments.py
deploy/backend/demopj/: database.py  main.py  models.py  schemas.py
deploy/backend/demopj.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
deploy/backend/demopj/routers/: cluster.py  community.py  datapoint.py  feedback.py
deploy2/: .env
fastapi/: ping_app.py  run.bat
full_taskwave/: README.md  timetable.py
jaavascript/: index.html
jigong/: 0521.ipynb  0521.py  20250519.ipynb  20250519.py  CSV3.ipynb  beautifulsoup1.py  books.xml  csv2.ipynb  csv4-4.py  csv4.ipynb  customers_FRANCE_only.csv  exjson.json  json1.py  json2.py  teamplay.py  test1_211833_이승열.ipynb  test2_211833_이승열.ipynb
navicode/: .environ  route2video.py  test.py
src/: AdditionalInfoPage.tsx  LoginPage.tsx  (+1 more)
(+231 files in other folders)
