[project]
name = "demopj"
version = "0.1.0"
description = "Demo project with FastAPI + SQLAlchemy + PostgreSQL"
readme = "README.md"
requires-python = ">=3.12"

# 여기에 실제 사용하는 라이브러리들을 모두 나열하세요
dependencies = [
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.23.0",    # ← uvicorn 추가
  "sqlalchemy>=2.0",
  "asyncpg>=0.27.0",
  "alembic>=1.11.0",
  "passlib[bcrypt]>=1.7.4",
  "scikit-learn>=1.3.0",        # ← 여기에 추가

  # 필요하다면 추가 분석/클러스터링용 라이브러리 등...
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
packages = ["demopj"]

